fixed z-index for arrow

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -74,6 +74,7 @@ html,body
       bottom: 50px
       right: 0
       color: #52a9a8
+      z-index: 100
 
     .bounce
       animation: bounce-animation 2s infinite
